update some catalina opts